--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,6 @@ header .header-container .navigation-position {
   border-radius: 15px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   padding: 0 60px;
 }
 @media (max-width: 900px) {
@@ -285,31 +284,68 @@ header .header-container .navigation-position {
     justify-content: center;
   }
 }
-.shorten-box .link-input {
+.shorten-box .input-box {
+  width: 100%;
+  margin-top: 54px;
+}
+@media (max-width: 900px) {
+  .shorten-box .input-box {
+    margin-top: 20px;
+  }
+}
+.shorten-box .input-box .message {
+  color: hsl(0deg, 87%, 67%);
+  font-size: 0.8rem;
+}
+@media (max-width: 900px) {
+  .shorten-box .input-box .message {
+    font-size: 0.6rem;
+  }
+}
+.shorten-box .input-box .link-input {
   height: 64px;
-  padding: 0 35px;
+  padding: 0 30px;
   width: 100%;
   border-radius: 10px;
   border: none;
   font-size: 1rem;
+  margin-bottom: 10px;
 }
 @media (max-width: 900px) {
-  .shorten-box .link-input {
+  .shorten-box .input-box .link-input {
     height: 48px;
+    padding: 0 15px;
+    margin-bottom: 5px;
   }
 }
-.shorten-box .link-input ::-moz-placeholder {
-  color: hsl(257deg, 7%, 63%);
+.shorten-box .input-box .link-input::-moz-placeholder {
+  color: hsl(0deg, 0%, 75%);
 }
-.shorten-box .link-input :-ms-input-placeholder {
-  color: hsl(257deg, 7%, 63%);
+.shorten-box .input-box .link-input:-ms-input-placeholder {
+  color: hsl(0deg, 0%, 75%);
 }
-.shorten-box .link-input ::placeholder {
-  color: hsl(257deg, 7%, 63%);
+.shorten-box .input-box .link-input::placeholder {
+  color: hsl(0deg, 0%, 75%);
+}
+.shorten-box .validate-error {
+  border: 3px solid hsl(0deg, 87%, 67%) !important;
+}
+.shorten-box .validate-error::-moz-placeholder {
+  color: hsl(0deg, 87%, 67%) !important;
+  opacity: 0.8 !important;
+}
+.shorten-box .validate-error:-ms-input-placeholder {
+  color: hsl(0deg, 87%, 67%) !important;
+  opacity: 0.8 !important;
+}
+.shorten-box .validate-error::placeholder {
+  color: hsl(0deg, 87%, 67%) !important;
+  opacity: 0.8 !important;
 }
 .shorten-box .submit-btn {
   width: 190px;
   margin-left: 24px;
+  margin-top: 53px;
   height: 64px;
   font-size: 1rem;
   border-radius: 10px;
@@ -319,8 +355,85 @@ header .header-container .navigation-position {
     width: 100%;
     margin-left: 0;
     height: 48px;
-    margin-top: 15px;
+    margin-top: 10px;
   }
+}
+
+.links-cards-section {
+  background-color: #f0f1f6;
+  padding-bottom: 20px;
+}
+
+.links-section {
+  max-width: 1110px;
+  margin: auto;
+  padding-top: 25px;
+}
+.links-section .shorten-card {
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 73px;
+  padding: 0 30px;
+  margin-bottom: 15px;
+  border-radius: 8px;
+}
+@media (max-width: 900px) {
+  .links-section .shorten-card {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    height: 150px;
+    padding: 10px;
+    margin: 24px 24px 0 24px;
+  }
+}
+@media (max-width: 900px) {
+  .links-section .shorten-card .link-original {
+    border-bottom: 1px solid hsl(0deg, 0%, 75%);
+    width: 100%;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    font-size: 0.9rem;
+  }
+}
+.links-section .shorten-card .right-box {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+@media (max-width: 900px) {
+  .links-section .shorten-card .right-box {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+  }
+}
+.links-section .shorten-card .right-box .short-link {
+  color: hsl(180deg, 66%, 49%);
+  margin-right: 25px;
+}
+@media (max-width: 900px) {
+  .links-section .shorten-card .right-box .short-link {
+    font-size: 0.9rem;
+  }
+}
+.links-section .shorten-card .right-box .copy-btn {
+  width: 100px;
+  border-radius: 7px;
+}
+@media (max-width: 900px) {
+  .links-section .shorten-card .right-box .copy-btn {
+    width: 100%;
+    margin-top: 10px;
+  }
+}
+.links-section .shorten-card .right-box .copied {
+  background-color: hsl(257deg, 27%, 26%);
+}
+.links-section .shorten-card .right-box .copied:hover {
+  background-color: hsl(257deg, 27%, 26%);
 }
 
 .statistics-section {
