--- a/sass/style.scss
+++ b/sass/style.scss
@@ -194,7 +194,6 @@ header{
     border-radius: 15px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     padding:0 60px;
     @media(max-width:900px){
         height: 180px;
@@ -202,35 +201,133 @@ header{
         top:-90px;
         justify-content: center;
     }
-
-    & .link-input{
-        height: 64px;
-        padding: 0 35px;
-        width: 100%;
-        border-radius: 10px;
-        border: none;
-        font-size: 1rem;
-        @media(max-width:900px){
-            height: 48px;
-        }
-        & ::placeholder{
-            color:$grayish-violet;
-        }
-    }
-    & .submit-btn{
-        width: 190px;
-        margin-left: 24px;
-        height: 64px;
-        font-size: 1rem;
-        border-radius: 10px;
-        @media(max-width:900px){
+        & .input-box{
             width: 100%;
-            margin-left: 0;
-            height: 48px;
-            margin-top: 15px;
+            margin-top: 54px;
+            @media(max-width:900px){
+                margin-top: 20px;
+                
+            }
+            & .message{
+                color:$red;
+                font-size: 0.8rem;
+                @media(max-width:900px){
+                    font-size: 0.6rem ;
+                }
+             
+            }
+                & .link-input {
+                        height: 64px;
+                        padding: 0 30px;
+                        width: 100%;
+                        border-radius: 10px;
+                        border: none;
+                        font-size: 1rem;
+                        margin-bottom: 10px;
+                        @media(max-width:900px) {
+                            height: 48px;
+                            padding:0 15px;
+                            margin-bottom: 5px;
+                        }
+                        &::placeholder{
+                            color:$gray;
+                        }
+
+                    }
+        }
+        & .validate-error{
+            border: 3px solid $red !important;
+            &::placeholder{
+                color:$red !important;
+                opacity: 0.8 !important;
+            }
+        }
+
+        
+            & .submit-btn {
+                width: 190px;
+                margin-left: 24px;
+                margin-top: 53px;
+                height: 64px;
+                font-size: 1rem;
+                border-radius: 10px;
+                
+                @media(max-width:900px) {
+                    width: 100%;
+                    margin-left: 0;
+                    height: 48px;
+                    margin-top: 10px;
+                }
+            }
+    }
+.links-cards-section{
+background-color: #f0f1f6;
+padding-bottom:20px;
+}
+.links-section{
+    max-width: $container-size;
+    margin:auto;
+    padding-top: 25px;
+   & .shorten-card{
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 73px;
+    padding: 0 30px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    @media(max-width:900px){
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        height: 150px;
+        padding: 10px;
+        margin: 24px 24px 0 24px;
+    }
+    & .link-original{
+        @media(max-width:900px){
+            border-bottom: 1px solid $gray;
+            width: 100%;
+            padding-bottom: 10px;
+            margin-bottom: 10px;
+            font-size: 0.9rem;
         }
     }
+    & .right-box{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        @media(max-width:900px){
+            flex-direction: column;
+            align-items: flex-start;
+            width: 100%;
+        }
+        & .short-link{
+            color:$cyan;
+            margin-right: 25px;
+            @media(max-width:900px){
+                font-size: 0.9rem;
+            }
+        }
+        & .copy-btn{
+            width: 100px;
+            border-radius: 7px;
+            @media(max-width:900px){
+                width: 100%;
+                margin-top: 10px;
+            }
+        }
+        & .copied{
+            background-color: $dark-violet;
+            &:hover{
+                background-color: $dark-violet;
+            }
+        }
+    }
+   }
 }
+
 .statistics-section{
     background-color: #f0f1f6;
     & .statistics-header-container{
